# dbml-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: dbml.pest  lib.rs
src/analyzer/: block.rs  err.rs  helper.rs  indexer.rs  mod.rs
src/ast/: enums.rs  indexes.rs  literal.rs  meta.rs  mod.rs  project.rs  refs.rs  schema.rs  table.rs  table_group.rs  unit.rs
src/parser/: err.rs  helper.rs  mod.rs
src/utils/: mod.rs
tests/: mod.rs
tests/dbml/: array_type.in.dbml  default_tables.in.dbml  enum_tables.in.dbml  general_schema.in.dbml  index_tables.in.dbml  project.in.dbml  sample_1.dbml  sea_orm_codegen.dbml  table_group.in.dbml
tests/dbml/checked/: sample_tmp.dbml
tests/dbml/mssql_importer/: general_schema.out.dbml  multiple_schema.out.dbml
tests/dbml/mysql_importer/: general_schema.out.dbml  multiple_schema.out.dbml
tests/dbml/postgres_importer/: general_schema.out.dbml  multiple_schema.out.dbml
