[package]
name = "dbml-rs"
version = "1.0.0"
edition = "2021"
description = "A DBML Parser for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/apskhem/dbml-rs"
readme = "README.md"
authors = ["Apisit Ritreungroj <cyber1.record@gmail.com>"]
keywords = ["parser", "parse", "dbml"]
exclude = [
  ".github/*",
  "tests/*",
  ".gitignore",
  "rustfmt.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.7", default-features = false, features = ["memchr"]}
pest_derive = { version = "2.7", default-features = false }
derive_more = { version = "0.99", default-features = false, features = ["display"]}

[features]
default = []
utils = []
